# ripen

./: .clinerules  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLA.md  COMMERCIAL.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  EULA.md  LICENSE  README.md  configure.bat  docker-compose.yml  pyproject.toml  ripen-admin.spec  ripen-client.spec  ripen-hub.spec  ruleset_payload.json  server_test_final.txt  server_test_full.txt  server_test_full_utf8.txt  server_test_full_v2.txt  server_test_output.txt  server_test_output_utf8.txt  server_test_ps.txt  setup.bat  start.bat  start_mcp.bat  test_license.rpn  test_output.txt  test_output_utf8.txt
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: build-binaries.yml  cla-check.yml  main.yml  nuitka-build.yml  release.yml
data/: auth.json.example
debug_data/: knowledge.db-shm  knowledge.db-wal
docs/: CLA_ASSISTANT_SETUP.md  DASHBOARD_USAGE.md  Github actionについて.md  LEGAL_TEMPLATE.md  MCPツール役割定義書.md  database_philosophy.md  db_schema.md  sequential_thinkingを取り巻く一連のフローと詳細アルゴリズム.md  アーキテクチャ.md  概念的要件定義書.md  配信計画.md
docs/ADR/: 0001-discontinue-docker-and-consolidate-to-windows-exe.md  ADR-0002-deprecate-and-remove-automated-ide-registration.md  ADR-0003-enable-binary-builds-on-develop-and-prs-for-testing.md  ADR-0004-publish-development-builds-as-pre-releases.md  ADR-0005-interactive-setup-wizard-model-customization.md  ADR-0006-remove-auth-unify-transport.md  ADR-0007-eliminate-silent-exceptions-and-stabilize-ci.md  ADR-0008-mcp-tool-compatibility-layer.md
docs/benchmarks/: LongMemEval.md
docs/blog/: SharedMemoryServerの宣伝&技術ブログ記事.md
docs/guides/: DASHBOARD_USAGE.md  DASHBOARD_USAGE_JA.md  operations.md  usage.md
docs/idea/: coware_sync_proposal_status.md  future_roadmap_and_maintenance.md  monetization_strategy.md  rejected_ebbinghaus_decay.md  sync_implementation_plan.md
docs/licensing/: implementation.md  licensing_guide.md
docs/marketing/: zenn_ripen_article.md  zenn_shared_memory_mcp_article.md  宣伝・掲載履歴.md
docs/reference/: architecture.md  schema.md
docs/troubleshooting/: 2026-05-09_mcp_missing_descriptions_fix.md  2026-06-14_mcp_tool_validation_error.md  2026-06-14_sequential_thinking_keyerror.md  2026-06-14_unique_constraint_failed.md  ci_hang_resolution.md  ci_hang_resolution_ja.md  llm_infrastructure_and_startup_fixes_20260506.md  mcp_eof_connection_error.md
scratch/: check_8377.py  check_repo.py  debug_ai_error.py  debug_docstrings.py  debug_mcp_tools.py  debug_middleware.py  debug_raw_tools.py  debug_sse_tools.py  debug_sse_tools_8378.py  diag_hub_direct.py  diag_sse_error.py  final_e2e_check.py  find_except_pass.py  fix_hyphens.py  fix_hyphens_v2.py  fix_quotes.py  fix_urls.py  generate_license.py  inspect_db.py  inspect_fastmcp.py  list_models.py  manual_post_test.py  protocol_log.jsonl  rebrand.py  resolve_conflict.py  resolve_remaining.py  ruleset.json  ruleset_info.json  ruleset_update.json  save_adr.py  test_db_recovery.py  test_fastmcp_kwargs.py  test_fastmcp_model.py  test_fastmcp_optional.py  test_guard.py  test_isort.py  test_isort_2.py  test_isort_3.py  test_isort_4.py  test_knowledge.db-shm  (+22 more)
scripts/: build_client.bat  build_exe.py  generate_db_docs.py  ripen-client.py  run_migrations.py  test_enterprise_discovery.py  verify_dashboard.py
scripts/analysis/: long_mem_eval.py  run_ragas_eval.py  simulate_flow.py
scripts/research/: check_model_metadata.py  reproduction_duplicate.py  verify_concurrency_fix.py  verify_token_counting.py
scripts/tools/: build.py  check_db.py  data_analysis_report.py  deep_audit.py  diag_thought.py  diagnose_db.py  inspect_db.py  repair_data.py  rescue_legacy_data.py  trace_viewer.py  verify_key_status.py  verify_troubleshooting.py
src/ripen/: __init__.py
src/ripen/api/: admin_server.py  auth.py  dashboard.py  licensing.py  proxy.py  server.py
src/ripen/cli/: admin_cli.py  init.py  register.py  salvage.py  shortcut.py  uninstall.py  unregister.py
src/ripen/common/: config.py  exceptions.py  plugins.py  tasks.py  utils.py
src/ripen/core/: ai_control.py  bank.py  distiller.py  graph.py  logic.py  search.py  thought_logic.py
src/ripen/domain/: models.py
src/ripen/infra/: llm.py  (+6 more)
tests/: conftest.py  repro_investigation.py
tests/chaos/: test_api_resilience_hard.py  test_chaos_operations.py  test_concurrency.py  test_db_locks.py  test_extreme_concurrency.py  test_failures.py  test_harsh_conditions.py  test_llm_failures.py  test_real_db_lock.py
tests/integration/: test_api_integration.py  test_dashboard_api_flow.py  test_frictionless_thinking.py  test_intelligence_provenance.py  test_knowledge_pipeline_flow.py  test_maturity_ranking.py  test_memory_saving_pipeline.py  test_resilience_pipeline.py  test_rest_api.py  test_save_pipeline.py  test_search_logic.py  test_session_flow.py
tests/system/: test_api_complete_lifecycle.py  test_async_mcp_flow.py  test_chaos_flow.py  test_complete_workflow.py  test_comprehensive_verification.py  test_e2e_research_flow.py  test_extreme_chaos.py  test_knowledge_lifecycle.py  test_mcp_session.py  test_mcp_tools.py  test_ops_lifecycle_integrity.py  test_reasoning_synergy.py  test_search_scoring_integrity.py  test_server_http.py  test_thought_database_integrity.py
tests/unit/: fake_client.py  test_ai_control.py  test_logic_core.py  test_logic_parallel.py  test_migration_ops.py  test_repos_registry.py  test_server_lenient_api.py  test_utils_logic.py
tests_backup/: conftest.py  repro_investigation.py
tests_backup/chaos/: test_db_locks.py  test_extreme_concurrency.py  test_harsh_conditions.py  test_llm_failures.py
tests_backup/integration/: test_dashboard_api_flow.py  test_knowledge_pipeline_flow.py  test_maturity_ranking.py  test_session_flow.py
tests_backup/system/: test_async_mcp_flow.py  test_chaos_flow.py  test_comprehensive_verification.py  test_reasoning_synergy.py  test_search_scoring_integrity.py  test_thought_database_integrity.py
tests_backup/unit/: fake_client.py  test_ai_control.py  test_database_retry.py  test_logic_normalization.py  test_logic_parallel.py  test_utils_logic.py
(+80 files in other folders)
