[project]
name = "ripen"
version = "0.1.0"
description = "The centralized knowledge hub for AI agents. Hybrid Vector + Graph memory with autonomous distillation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
    { name = "ayato-labs", email = "contact@ayato-labs.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "loguru>=0.7.2",
    "starlette>=0.35.0",
    "aiofiles>=23.2.1",
    "mcp>=1.0.0",
    "google-genai>=0.3.0",
    "fastembed>=0.2.0",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=3.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "djlint>=1.34.0",
]

[project.urls]
Homepage = "https://github.com/ayato-labs/ripen"
Repository = "https://github.com/ayato-labs/ripen"

[project.scripts]
ripen = "ripen.api.server:main"
ripen-start = "ripen.api.server:main"
ripen-init = "ripen.cli.init:main"
ripen-register = "ripen.cli.register:main"
ripen-unregister = "ripen.cli.unregister:main"
ripen-admin = "ripen.cli.admin_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ripen"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["scratch/"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL"]
ignore = [
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLC0415", # Local imports (used to avoid circular dependencies)
    "PLR2004", # Magic values in comparisons
    "PLW0603", # Global statement
    "E402",    # Module level import not at top of file
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["ripen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "system: System tests",
    "chaos: Chaos/Failure tests",
]
asyncio_default_fixture_loop_scope = "function"
